gitlab-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-server
  labels:
    app: gitlab-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-server
  template:
    metadata:
      labels:
        app: gitlab-server
    spec:
      containers:
      - name: gitlab-server
        image: gitlab/gitlab-ce:17.1.6-ce.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: gitlab-vols
          mountPath: /etc/gitlab
        - name: gitlab-vols
          mountPath: /var/log/gitlab
        - name: gitlab-vols
          mountPath: /var/opt/gitlab
      volumes:
      - name: gitlab-vols
        persistentVolumeClaim:
          claimName: gitlab-pv-claim
