teamcity-agent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamcity-agent
  labels:
    app: teamcity-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamcity-agent
  template:
    metadata:
      labels:
        app: teamcity-agent
    spec:
      containers:
      - name: teamcity-agent
        image: jetbrains/teamcity-minimal-agent:2024.07.2
        ports:
        - containerPort: 9090
