teamcity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamcity-server
  labels:
    app: teamcity-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamcity-server
  template:
    metadata:
      labels:
        app: teamcity-server
    spec:
      containers:
      - name: teamcity-server
        image: jetbrains/teamcity-server:2024.07.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: teamcity-persistent-storage
          mountPath: /data/teamcity_server/datadir
      volumes:
      - name: teamcity-persistent-storage
        persistentVolumeClaim:
          claimName: teamcity-pv-claim
