gitlab-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: gitlab-server-svc
spec:
  selector:
    app: gitlab-server
  ports:
    - name: glhttp
      protocol: TCP
      port: 8080
      targetPort: 80
    - name: glhttps
      protocol: TCP
      port: 443
      targetPort: 443
    - name: glssh
      protocol: TCP
      port: 22
      targetPort: 22
  type: NodePort
