mysql_srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-srv
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
