teamcity-agent-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: teamcity-agent-svc
spec:
  selector:
    app: teamcity-agent
  ports:
    - name: tcown
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort
