teamcity-externalname-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: external-svc
spec:
  type: ExternalName
  externalName: tc-local.com
