teamcity-service-enternalname.yaml
apiVersion: v1
kind: Service
metadata: 
  name: external-svc
spec:
  type: ExternalName
  externalName: teamcity-local.com
