teamcity-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
   - host: app.tc-local.com
     http:
        paths:
          - pathType: Exact
            path: /tc
            backend:
              service:
                name: teamcity-server-svc
                port: 
                  number: 80
          - pathType: Exact
            path: /agent
            backend:
              service:
                name: teamcity-agent-svc
                port: 
                  number: 9090
